build_error.log
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.8/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Configure project :fabric
Fabric Loom: 1.5.8

> Task :common:compileJava UP-TO-DATE

> Task :forge:compileJava FAILED
/home/az/project/BusinessCraft/forge/src/main/java/com/quackers29/businesscraft/forge/platform/ForgeEventHelper.java:44: error: cannot find symbol
        com.quackers29.businesscraft.forge.event.ForgeModEvents.setActiveTownBlock(pos);
                                                               ^
  symbol:   method setActiveTownBlock(BlockPos)
  location: class ForgeModEvents
/home/az/project/BusinessCraft/forge/src/main/java/com/quackers29/businesscraft/forge/platform/ForgeEventHelper.java:49: error: cannot find symbol
        com.quackers29.businesscraft.forge.event.ForgeModEvents.setActiveTownBlock(null);
                                                               ^
  symbol:   method setActiveTownBlock(<null>)
  location: class ForgeModEvents
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':forge:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
2 actionable tasks: 1 executed, 1 up-to-date
